src/styles.scss
/* You can add global styles to this file, and also import other style files */
@import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');

.glass-effect {
    background-color: rgba(255, 255, 255, 0.003);
    backdrop-filter: blur(0px);
  }

.thin-glass-effect {
  background-color: rgba(255, 255, 255, 0.003);
  opacity: 0;
  backdrop-filter: blur(5px);
}
.header-button {
  width: 100%;
  height: 100%;
  background-color: transparent;
  border-color: transparent;
}

.header-element-container {
  width: 100%;
  height: 15vh;
  text-align: center;
}

* {
  color: whitesmoke;
  }

.institution-image{
    height: 70px;
    width: 70px;
    border-radius: 50%;
    opacity: 0;
}

.font-style{
  font-family: 'Share Tech Mono', monospace;
}


.intermediate-text{
  font-size: 2rem;
}

/* Works on Firefox */
* {
  scrollbar-width: thin;
  scrollbar-color: white rgb(18, 18, 18);
}

/* Works on Chrome, Edge, and Safari */
*::-webkit-scrollbar {
  width: 12px;
}

*::-webkit-scrollbar-track {
  background: #121212;
}

*::-webkit-scrollbar-thumb {
  background-color: rgb(221, 221, 221);
  border: 3px solid#121212;
}

